--- a/login/Profil/sprogmakker/Sprogmakker.html
+++ b/login/Profil/sprogmakker/Sprogmakker.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kursist profil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../../css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylelogin.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
 </head>
 
 <header>
     <!--Logo øverst oppe-->
-    <a href="http://localhost:3000/sprogmakkerside"><img class="tilbageknap" src="../../billeder/tilbage_knap.png" alt="tilbage"></a>
+    <a href="http://localhost:8080/sprogmakkerside"><img class="tilbageknap" src="https://storage.googleapis.com/billedertilsprogapp/logout.png" alt="tilbage"></a>
     <p id="headertekst">Personlig side</p>
 </header>
 
