--- a/login/menu/opretBruger.html
+++ b/login/menu/opretBruger.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Opret Bruger</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylelogin.css" />
     <script src="../ModelControllerRoute/opretBruger.js"></script>
 </head>
         <!--Logo øverst oppe-->
-      <a href="http://localhost:3000"><img class="logoutmenu" src="../billeder/logout.png" alt="tilbage"></a>
+        <a href="https://sprogapp.appspot.com/login"><img class="tilbageknap" src="https://storage.googleapis.com/billedertilsprogapp/logout.png" alt="tilbage"></a>
 <body>
 
     <div class="containerlogin">
